--- a/01-intro/calculator-3.html
+++ b/01-intro/calculator-3.html
@@ -129,5 +129,26 @@
 	<span id="spanNumber2Error"></span>
 	<input type="button" value="Calculate" id="btnCalculate">
 	<div id="divResult">[Result]</div>
+
+	<input type="button" value="Save">
+	<h3>History</h3>
+	<table>
+		<thead>
+			<tr>
+				<th>Operand 1</th>
+				<th>Operand 2</th>
+				<th>Operation</th>
+				<th>Result</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>100</td>
+				<td>200</td>
+				<td>+</td>
+				<td>300</td>
+			</tr>
+		</tbody>
+	</table>
 </body>
 </html>
